data/derived/comb/progs/unify/prog6581.ml.out
Characters 151-155:
  let (_, res) = List.fold_left f base args in
                                       ^^^^
Error: This expression has type ('a * 'b) list
       but an expression was expected of type (int list -> int) list
       Type 'a * 'b is not compatible with type int list -> int 
